--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           return liff.getProfile();
         } else {
           liff.login({
-            redirectUri: "xxxxxxxxx",
+            redirectUri: "https://nute1112.github.io/liff/",
           });
         }
       })
